--- a/index.html
+++ b/index.html
@@ -1,27 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
     <title>alfierenn.dev</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- browser metas -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Alfie Renn's developer portfolio" />
+
+    <!-- embed metas - https://ogp.me/ -->
+    <meta property="og:title" content="Alfie Renn's developer portfolio" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://alfierenn.dev" />
+    <meta property="og:image" content="https://alfierenn.dev/og-image.png" />
+    <meta
+      property="og:description"
+      content="Alfie Renn's developer portfolio"
+    />
+    <meta property="og:locale" content="en_GB" />
+
+    <!-- favicons -->
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <style>
+      * {
+        box-sizing: border-box;
+      }
       body {
-        background-color: #000;
-        color: #fff;
-        font-family: monospace;
-        text-align: center;
         margin: 0;
         padding: 0;
+      }
+      header img {
+        height: 20rem;
+        width: 20rem;
+        border-radius: 50%;
+        margin: 1rem;
       }
     </style>
   </head>
   <body>
-    <h1>alfierenn.dev</h1>
-    <img src="./construction/1.gif" alt="construction" />
-    <img src="./construction/2.gif" alt="construction" />
-    <img src="./construction/3.gif" alt="construction" />
-    <img src="./construction/4.gif" alt="construction" />
-    <img src="./construction/5.gif" alt="construction" />
-    <img src="./construction/6.gif" alt="construction" />
+    <header>
+      <img
+        src="/alfie-renn-headshot.png"
+        alt="headshot of Alfie Renn"
+        width="800px"
+        height="800px"
+      />
+      <h1>alfierenn.dev</h1>
+      <a href="mailto:alfie@alfierenn.dev">alfie@alfierenn.dev</a>
+    </header>
+    <main>
+      <section id="portfolio">
+        <h2>Portfolio</h2>
+        <p>Websites I made</p>
+      </section>
+      <section id="Testimonials">
+        <h2>Testimonials</h2>
+        <p>What people have said</p>
+      </section>
+      <section id="Contact">
+        <h2>Contact</h2>
+        <a href="mailto:alfie@alfierenn.dev">alfie@alfierenn.dev</a>
+      </section>
+    </main>
+    <footer></footer>
   </body>
 </html>
